@@ -14,7 +14,9 @@ Build-Depends: apt-utils,
                python-central (>= 0.5),
                python-debian,
                python-distutils-extra (>= 1.9.0),
-               python-sphinx (>= 0.5)
+               python-gtk2,
+               python-sphinx (>= 0.5),
+               python-vte
 Vcs-Bzr: http://bzr.debian.org/apt/python-apt/debian-sid
 Vcs-Browser: http://bzr.debian.org/loggerhead/apt/python-apt/debian-sid/changes
 
