@@ -9,6 +9,10 @@ python-apt (0.7.10~exp1) experimental; urgency=low
     - Update Standards-Version to 3.8.1
     - Use ${binary:Version} instead of ${Source-Version}
   * debian/copyright: Switch to machine-interpretable copyright
+  * Fix documentation building
+    - doc/source/conf.py: Only include directories for current python version.
+    - debian/control: Build-Depend on python-gtk2, python-vte.
+    - setup.py: If pygtk can not be imported, do not build the documentation.
 
  -- Julian Andres Klode <jak@debian.org>  Wed, 01 Apr 2009 15:24:29 +0200
 
